<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/background_login"
tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="330dp"
        android:layout_height="350dp"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/title"
                android:textColor="@color/background_login"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subtitle"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/subtitle"
                android:textColor="@color/background_login"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:hint="@string/emailInput"
                android:inputType="textEmailAddress"
                android:background="@drawable/inputs_login"
                />


            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:layout_marginTop="5sp"
                android:hint="@string/passwordInput"
                android:inputType="numberPassword"
                android:background="@drawable/inputs_login"
                />

            <TextView
                android:id="@+id/validation"
                android:layout_width="250dp"
                android:layout_height="20dp"
                android:textColor="@color/red_button"
                android:textSize="12sp"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/loginButton"
                android:layout_width="250dp"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/button_login"
                android:text="@string/loginButton"
                android:textColor="@color/white"
                android:textAlignment="center"
                />

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>