<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:paddingBottom="100dp"
    android:background="@color/gray_light"
    tools:context=".WelcomeActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="40dp"
        android:text="@string/welcome"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/background_login"
        />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        android:text="@string/value_void"
        android:gravity="center"
        />

    <TextView
        android:id="@+id/description"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_name"
        android:text="@string/description"
        android:padding="0dp"
        android:gravity="center"
        android:layout_marginTop="30dp"
        />

    <Button
        android:id="@+id/logout_button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_login"
        android:text="@string/logout_button"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description" />

</androidx.constraintlayout.widget.ConstraintLayout>